[package]
name = "hemtt-app"
version = "0.8.0-alpha"
authors = ["Brett <brett@mayson.io>"]
edition = "2018"

[dependencies]
hemtt = { path = "../hemtt" }
hemtt-arma-config = { path = "../hemtt-arma-config" }
hemtt-handlebars = { path = "../hemtt-handlebars" }
hemtt-macros = { path = "../hemtt-macros" }
hemtt-pbo = { path = "../hemtt-pbo" }
hemtt-sign = { path = "../hemtt-sign" }

clap = "2"
dyn-clone = "1.0"
git2 = { version = "0.15.0", default-features = false }
glob = "0.3"
lazy_static = "1.4"
log = "0.4"
percent-encoding = "2.1"
rayon = "1.5"
regex = "1.6"
simplelog = "0.12"
state = "0.5"
strum = "0.24"
toml = "0.5"
vfs = "0.7"
walkdir = "2.3"
webbrowser = "0.7"

[dev-dependencies]
semver = "0.11"
