[package]
name = "hemtt-arma-config"
version = "0.1.0"
authors = ["Brett <brett@mayson.io>"]
edition = "2018"

[dependencies]
byteorder = "1.4"
hemtt = { path = "../hemtt" }
hemtt-io = { path = "../hemtt-io" }
log = "0.4"
pest = "2.2"
pest_derive = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "basic_class"
harness = false

[[bench]]
name = "cba"
harness = false
