[package]
name = "hemtt-handlebars"
version = "0.1.0"
authors = ["Brett <brett@mayson.io>"]
edition = "2018"

[dependencies]
chrono = "0.4"
git2 = { version = "0.15", default-features = false }
handlebars = "4.3"
log = "0.4"
semver = { version = "0.11", features = ["serde"] }
serde_json = "1.0"
shell-words = "1"

[dev-dependencies]
fs_extra = "1.2"
tempdir = "0.3"
serial_test = "0.8"
